--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "react-assignment",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mikaelahallenberg.github.io/hackernews/",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "moment": "^2.24.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
@@ -18,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
